--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,6 @@ jobs:
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: HelloWorld
           environment_name: Helloworld-env
-          version_label: [${{ github.run_id }}] ${{ github.event.head_commit.message }}
+          version_label: "react-demo-new-${{ github.run_id }}"
           region: us-east-2
           deployment_package: deploy.zip
