--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@zeit/next-sass": "^1.0.1",
     "ahooks": "^2.9.2",
     "antd": "^4.9.4",
+    "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-styled-components": "^1.12.0",
