--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,8 @@
     "react/react-in-jsx-scope": "off",
     "react/jsx-props-no-spreading": "off",
     "react/forbid-prop-types": "off",
+    "react/jsx-one-expression-per-line": "off",
+    "react/no-unescaped-entities": "off",
     "jsx-a11y/label-has-associated-control": "off",
     "no-unused-vars": "warn"
   }
