--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-styled-components": "^1.12.0",
-    "cors": "^2.8.5",
     "eslint": "^7.16.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "express-validator": "^6.9.0",
     "less": "3.9.0",
     "less-vars-to-js": "^1.3.0",
     "next": "10.0.4",
