--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,8 @@
 NEXT_PUBLIC_VAR1=xxx
 
-XXXAPI_URL=http://localhost:3100
+API_URL=http://localhost:3100
+NODE_ENV=development
+STAGE_ENV=local
 DB_HOST=localhost
 DB_USER=myuser
 DB_PASS=mypassword
