--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,8 @@
 NEXT_PUBLIC_VAR1=xxx
 
+API_URL=http://production:3100
+NODE_ENV=production
+STAGE_ENV=production
 DB_HOST=localhost
 DB_USER=myuser
 DB_PASS=mypassword
