--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,8 @@ name: CI
 # Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
+  # push:
+  #   branches: [ main ]
   pull_request:
     branches: [ main ]
 
@@ -22,19 +22,29 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - name: Environment variables
+        env:
+          STAGE_ENV: production
+
       - name: Checkout source code
         uses: actions/checkout@v1
 
-      - name: Generate deployment package
-        run: zip -r deploy.zip . -x '*.git*'
+      - name: Replace stage env string in Dockerfile
+        run: sed -i 's/pnpm run start/pnpm run start:$STAGE_ENV/' Dockerfile
 
-      - name: Deploy to EB
-        uses: einaregilsson/beanstalk-deploy@v14
-        with:
-          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: HelloWorld
-          environment_name: Helloworld-env
-          version_label: "${{ github.run_id }}-${{ github.run_number }}"
-          region: us-east-2
-          deployment_package: deploy.zip
+      - name: Print
+        run: cat Dockerfile
+
+      # - name: Generate deployment package
+      #   run: zip -r deploy.zip . -x '*.git*'
+
+      # - name: Deploy to EB
+      #   uses: einaregilsson/beanstalk-deploy@v14
+      #   with:
+      #     aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     application_name: HelloWorld
+      #     environment_name: Helloworld-env
+      #     version_label: "${{ github.run_id }}-${{ github.run_number }}"
+      #     region: us-east-2
+      #     deployment_package: deploy.zip
