--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,8 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
-  # pull_request:
-  #   branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -25,13 +25,10 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v1
 
-      - name: Environment variables
-        run: echo set env variables
-        env:
-          STAGE_ENV: production
-
       - name: Replace stage env string in Dockerfile
         run: sed -i 's/pnpm run start/pnpm run start:$STAGE_ENV/' Dockerfile
+        env:
+          STAGE_ENV: production
 
       - name: Print
         run: cat Dockerfile
