--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,26 +26,29 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v1
 
+      - name: Checkout source code
+        run: echo ::set-env name=STAGE_ENV::"test"
+
       - name: Replace stage env string in Dockerfile
         uses: jacobtomlinson/gha-find-replace@master
         with:
           find: "pnpm run start"
-          replace: "pnpm run start:test"
+          replace: "pnpm run start:${STAGE_ENV}"
           include: "Dockerfile"
 
       - name: Print Dockerfile
         run: cat Dockerfile
 
-      - name: Generate deployment package
-        run: zip -r deploy.zip . -x '*.git*'
+      # - name: Generate deployment package
+      #   run: zip -r deploy.zip . -x '*.git*'
 
-      - name: Deploy to EB
-        uses: einaregilsson/beanstalk-deploy@v14
-        with:
-          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: HelloWorld
-          environment_name: Helloworld-env
-          version_label: "${{ github.run_id }}-${{ github.run_number }}"
-          region: us-east-2
-          deployment_package: deploy.zip
+      # - name: Deploy to EB
+      #   uses: einaregilsson/beanstalk-deploy@v14
+      #   with:
+      #     aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     application_name: HelloWorld
+      #     environment_name: Helloworld-env
+      #     version_label: "${{ github.run_id }}-${{ github.run_number }}"
+      #     region: us-east-2
+      #     deployment_package: deploy.zip
