--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,14 @@ jobs:
         run: echo '::set-output name=STAGE_ENV::test'
         id: custom-env
 
+      - name: Set random string
+        uses: TGPSKI/name-generator-node-action@v2
+        with:
+          separator: '_'
+          length: '4'
+          style: 'upperCase'
+        id: generator-name
+
       - name: Replace stage env string in Dockerfile
         uses: jacobtomlinson/gha-find-replace@master
         with:
@@ -40,16 +48,19 @@ jobs:
       - name: Print Dockerfile
         run: cat Dockerfile
 
-      - name: Generate deployment package
-        run: zip -r deploy.zip . -x '*.git*'
+      - name: TEST
+        run: echo ${{ steps.generator.outputs.name }}
 
-      - name: Deploy to EB
-        uses: einaregilsson/beanstalk-deploy@v14
-        with:
-          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: HelloWorld
-          environment_name: Helloworld-env
-          version_label: "${{ github.run_id }}-${{ github.run_number }}"
-          region: us-east-2
-          deployment_package: deploy.zip
+      # - name: Generate deployment package
+      #   run: zip -r deploy.zip . -x '*.git*'
+
+      # - name: Deploy to EB
+      #   uses: einaregilsson/beanstalk-deploy@v14
+      #   with:
+      #     aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     application_name: HelloWorld
+      #     environment_name: Helloworld-env
+      #     version_label: "${{ github.run_id }}-${{ steps.generator.outputs.name }}"
+      #     region: us-east-2
+      #     deployment_package: deploy.zip
