--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,16 +27,8 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Set custom env
-        run: echo '::set-output name=STAGE_ENV::test'
+        run: echo '::set-output name=STAGE_ENV::test,name=RANDOM_STR=$(date +%s)'
         id: custom-env
-
-      - name: Set random string
-        uses: TGPSKI/name-generator-node-action@v2
-        with:
-          separator: '_'
-          length: '4'
-          style: 'upperCase'
-        id: generator-name
 
       - name: Replace stage env string in Dockerfile
         uses: jacobtomlinson/gha-find-replace@master
@@ -49,7 +41,7 @@ jobs:
         run: cat Dockerfile
 
       - name: TEST
-        run: echo ${{ steps.generator.outputs.name }}
+        run: echo ${{ steps.custom-env.outputs.RANDOM_STR }}
 
       # - name: Generate deployment package
       #   run: zip -r deploy.zip . -x '*.git*'
