--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,22 +26,26 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v1
 
-      - name: Set custom env
-        run: echo '::set-output name=STAGE_ENV::test,name=RANDOM_STR=$(date +%s)'
-        id: custom-env
+      - name: Set stage env
+        run: echo '::set-output name=STAGE_ENV::test'
+        id: stage-env
+
+      - name: Set random env
+        run: echo '::set-output name=RANDOM_STR=$(date +%s)'
+        id: random-env
 
       - name: Replace stage env string in Dockerfile
         uses: jacobtomlinson/gha-find-replace@master
         with:
           find: "pnpm run start"
-          replace: "pnpm run start:${{ steps.custom-env.outputs.STAGE_ENV }}"
+          replace: "pnpm run start:${{ steps.stage-env.outputs.STAGE_ENV }}"
           include: "Dockerfile"
 
       - name: Print Dockerfile
         run: cat Dockerfile
 
       - name: TEST
-        run: echo ${{ steps.custom-env.outputs.RANDOM_STR }}
+        run: echo ${{ steps.random-env.outputs.RANDOM_STR }}
 
       # - name: Generate deployment package
       #   run: zip -r deploy.zip . -x '*.git*'
