--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,12 +27,12 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Set stage env
-        run: echo '::set-output name=STAGE_ENV::test'
+        run: echo '::set-output name=STAGE_ENV::test,name=RANDOM_STR::$(date +%s)'
         id: stage-env
 
-      - name: Set random env
-        run: echo '::set-output name=RANDOM_STR=$(date +%s)'
-        id: random-env
+      # - name: Set random env
+      #   run: echo '::set-output name=RANDOM_STR::$(date +%s)'
+      #   id: random-env
 
       - name: Replace stage env string in Dockerfile
         uses: jacobtomlinson/gha-find-replace@master
@@ -45,7 +45,7 @@ jobs:
         run: cat Dockerfile
 
       - name: TEST
-        run: echo ${{ steps.random-env.outputs.RANDOM_STR }}
+        run: echo ${{ steps.stage-env.outputs.RANDOM_STR }}
 
       # - name: Generate deployment package
       #   run: zip -r deploy.zip . -x '*.git*'
