--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,13 +26,16 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v1
 
+      # - name: Package install
+      #   run: sudo apt-get install -y pwgen
+
       - name: Set stage env
-        run: echo '::set-output name=STAGE_ENV::test,name=RANDOM_STR::$(date +%s)'
+        run: echo '::set-output name=STAGE_ENV::test'
         id: stage-env
 
-      # - name: Set random env
-      #   run: echo '::set-output name=RANDOM_STR::$(date +%s)'
-      #   id: random-env
+      - name: Set random env
+        run: echo '::set-output name=RANDOM_STR::$(openssl rand -base64 14)'
+        id: random-env
 
       - name: Replace stage env string in Dockerfile
         uses: jacobtomlinson/gha-find-replace@master
@@ -45,7 +48,7 @@ jobs:
         run: cat Dockerfile
 
       - name: TEST
-        run: echo ${{ steps.stage-env.outputs.RANDOM_STR }}
+        run: echo ${{ steps.random-env.outputs.RANDOM_STR }}
 
       # - name: Generate deployment package
       #   run: zip -r deploy.zip . -x '*.git*'
