--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ test ]
+    branches: [ main ]
   pull_request:
-    branches: [ test ]
+    branches: [ main ]
     types: [closed]
 
   # Allows you to run this workflow manually from the Actions tab
@@ -30,10 +30,6 @@ jobs:
         run: echo '::set-output name=STAGE_ENV::production'
         id: stage-env
 
-      - name: Set random env
-        run: echo '::set-output name=RANDOM_STR::$(openssl rand -base64 14)'
-        id: random-env
-
       - name: Replace stage env string in Dockerfile
         uses: jacobtomlinson/gha-find-replace@master
         with:
@@ -54,6 +50,6 @@ jobs:
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: HelloWorld
           environment_name: Helloworld-production
-          version_label: "helloworld-${{ github.run_id }}-${{ steps.random-env.outputs.RANDOM_STR }}"
+          version_label: "helloworld-${{ github.run_id }}-${{ github.run_number }}"
           region: us-east-2
           deployment_package: deploy.zip
