--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,9 +7,9 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ test ]
-  pull_request:
-    branches: [ test ]
-    types: [closed]
+  # pull_request:
+  #   branches: [ test ]
+  #   types: [closed]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -30,10 +30,6 @@ jobs:
         run: echo '::set-output name=STAGE_ENV::test'
         id: stage-env
 
-      - name: Set random env
-        run: echo '::set-output name=RANDOM_STR::$(openssl rand -base64 14)'
-        id: random-env
-
       - name: Replace stage env string in Dockerfile
         uses: jacobtomlinson/gha-find-replace@master
         with:
@@ -44,19 +40,16 @@ jobs:
       - name: Print Dockerfile
         run: cat Dockerfile
 
-      - name: Test
-        run: echo ${{ steps.random-env.outputs.RANDOM_STR }}
+      - name: Generate deployment package
+        run: zip -r deploy.zip . -x '*.git*'
 
-      # - name: Generate deployment package
-      #   run: zip -r deploy.zip . -x '*.git*'
-
-      # - name: Deploy to EB
-      #   uses: einaregilsson/beanstalk-deploy@v14
-      #   with:
-      #     aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     application_name: HelloWorld
-      #     environment_name: Helloworld-test
-      #     version_label: "helloworld-${{ github.run_id }}-${{ steps.random-env.outputs.RANDOM_STR }}"
-      #     region: us-east-2
-      #     deployment_package: deploy.zip
+      - name: Deploy to EB
+        uses: einaregilsson/beanstalk-deploy@v14
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          application_name: HelloWorld
+          environment_name: Helloworld-test
+          version_label: "helloworld-${{ github.run_id }}-${{ github.run_number }}"
+          region: us-east-2
+          deployment_package: deploy.zip
