--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,8 @@ jobs:
 
   # This workflow contains a single job called "build"
   deploy:
+    needs: eslint
+
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
