--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,11 +19,11 @@ jobs:
   notify:
     runs-on: ubuntu-latest
     steps:
-      - name: Eslint Action
+      - name: Nofify action
         uses: snow-actions/line-notify@v1.0.0
         with:
           access_token: ${{ secrets.LINE_ACCESS_TOKEN }}
-          message: [HelloWorld - test] start deploy...
+          message: "[HelloWorld - test] start deploy..."
 
   eslint:
     runs-on: ubuntu-latest
@@ -31,7 +31,7 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v1
 
-      - name: Eslint Action
+      - name: Eslint action
         uses: stefanoeb/eslint-action@1.0.2
 
       - name: The job has succeeded
@@ -39,14 +39,14 @@ jobs:
         uses: snow-actions/line-notify@v1.0.0
         with:
           access_token: ${{ secrets.LINE_ACCESS_TOKEN }}
-          message: [HelloWorld - test] eslint success
+          message: "[HelloWorld - test] eslint success"
 
       - name: The job has failed
         if: ${{ failure() }}
         uses: snow-actions/line-notify@v1.0.0
         with:
           access_token: ${{ secrets.LINE_ACCESS_TOKEN }}
-          message: [HelloWorld - test] eslint fail
+          message: "[HelloWorld - test] eslint fail"
 
   # This workflow contains a single job called "build"
   deploy:
