--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Nofify action
-        run: curl -X POST https://notify-api.line.me/api/notify -H \"Authorization: Bearer ${{ secrets.LINE_ACCESS_TOKEN }}\" -d message=\"[${{ github.repository }}][${{ env.stage }}][${{ github.event_name }}] start deploy...&stickerPackageId=3&stickerId=233\"
+        run: "curl -X POST https://notify-api.line.me/api/notify -H 'Authorization: Bearer ${{ secrets.LINE_ACCESS_TOKEN }}' -d message='[${{ github.repository }}][${{ env.stage }}][${{ github.event_name }}] start deploy...&stickerPackageId=3&stickerId=233'"
 
   # eslint:
   #   runs-on: ubuntu-latest
