--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,6 @@ name: CI
 env:
   stage: 'test'
   notify_url: 'https://notify-api.line.me/api/notify'
-  notify_msg_prefix: "[${{ github.repository }}][${{ env.stage }}]"
 
 # Controls when the action will run.
 on:
@@ -25,85 +24,73 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Nofify action
-        run: "curl -X POST ${{ env.notify_url }} -H 'Authorization: Bearer ${{ secrets.LINE_ACCESS_TOKEN }}' -d message='${{ env.notify_msg_prefix }} start deploy...&stickerPackageId=3&stickerId=233'"
+        run: "curl -X POST ${{ env.notify_url }} -H 'Authorization: Bearer ${{ secrets.LINE_ACCESS_TOKEN }}' -d message='[${{ github.repository }}][${{ env.stage }}] start deploy...&stickerPackageId=3&stickerId=233'"
 
-  # eslint:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout source code
-  #       uses: actions/checkout@v1
+  eslint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v1
 
-  #     - name: Eslint action
-  #       uses: stefanoeb/eslint-action@1.0.2
+      - name: Eslint action
+        uses: stefanoeb/eslint-action@1.0.2
 
-  #     - name: The job has succeeded
-  #       if: ${{ success() }}
-  #       uses: appleboy/line-action@master
-  #       with:
-  #         token: ${{ secrets.LINE_ACCESS_TOKEN }}
-  #         message: "[HelloWorld - test] eslint success"
+      - name: The job has succeeded
+        if: ${{ success() }}
+        run: "curl -X POST ${{ env.notify_url }} -H 'Authorization: Bearer ${{ secrets.LINE_ACCESS_TOKEN }}' -d message='[${{ github.repository }}][${{ env.stage }}] eslint success'"
 
-  #     - name: The job has failed
-  #       if: ${{ failure() }}
-  #       uses: appleboy/line-action@master
-  #       with:
-  #         token: ${{ secrets.LINE_ACCESS_TOKEN }}
-  #         message: "[HelloWorld - test] eslint fail"
+      - name: The job has failed
+        if: ${{ failure() }}
+        run: "curl -X POST ${{ env.notify_url }} -H 'Authorization: Bearer ${{ secrets.LINE_ACCESS_TOKEN }}' -d message='[${{ github.repository }}][${{ env.stage }}] eslint fail'"
 
-  # # This workflow contains a single job called "build"
-  # deploy:
-  #   needs: eslint
+  # This workflow contains a single job called "build"
+  deploy:
+    needs: eslint
 
-  #   # The type of runner that the job will run on
-  #   runs-on: ubuntu-latest
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
 
-  #   # Steps represent a sequence of tasks that will be executed as part of the job
-  #   steps:
-  #     - name: Checkout source code
-  #       uses: actions/checkout@v1
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v1
 
-  #     - name: Set stage env
-  #       run: echo '::set-output name=STAGE_ENV::test'
-  #       id: stage-env
+      - name: Set stage env
+        run: echo '::set-output name=STAGE_ENV::test'
+        id: stage-env
 
-  #     - name: Replace stage env string in Dockerfile
-  #       uses: jacobtomlinson/gha-find-replace@master
-  #       with:
-  #         find: "pnpm run start"
-  #         replace: "pnpm run start:${{ steps.stage-env.outputs.STAGE_ENV }}"
-  #         include: "Dockerfile"
+      - name: Replace stage env string in Dockerfile
+        uses: jacobtomlinson/gha-find-replace@master
+        with:
+          find: "pnpm run start"
+          replace: "pnpm run start:${{ steps.stage-env.outputs.STAGE_ENV }}"
+          include: "Dockerfile"
 
-  #     - name: Print Dockerfile
-  #       run: cat Dockerfile
+      - name: Print Dockerfile
+        run: cat Dockerfile
 
-  #     - name: Generate deployment package
-  #       run: zip -r deploy.zip . -x '*.git*'
+      - name: Generate deployment package
+        run: zip -r deploy.zip . -x '*.git*'
 
-  #     - name: Deploy to EB
-  #       uses: einaregilsson/beanstalk-deploy@v14
-  #       with:
-  #         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #         application_name: HelloWorld
-  #         environment_name: Helloworld-test
-  #         version_label: "helloworld-${{ github.run_id }}-${{ github.run_number }}"
-  #         region: us-east-2
-  #         deployment_package: deploy.zip
+      - name: Deploy to EB
+        uses: einaregilsson/beanstalk-deploy@v14
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          application_name: HelloWorld
+          environment_name: Helloworld-test
+          version_label: "helloworld-${{ github.run_id }}-${{ github.run_number }}"
+          region: us-east-2
+          deployment_package: deploy.zip
 
-  #     - name: The job has failed
-  #       if: ${{ failure() }}
-  #       uses: appleboy/line-action@master
-  #       with:
-  #         token: ${{ secrets.LINE_ACCESS_TOKEN }}
-  #         message: "[HelloWorld - test] deploy fail"
+      - name: The job has failed
+        if: ${{ failure() }}
+        run: "curl -X POST ${{ env.notify_url }} -H 'Authorization: Bearer ${{ secrets.LINE_ACCESS_TOKEN }}' -d message='[${{ github.repository }}][${{ env.stage }}] deploy success'"
 
-  # notify_end:
-  #   needs: deploy
+  notify_end:
+    needs: deploy
 
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Nofify action
-  #       uses: appleboy/line-action@master
-  #       with:
-  #         token: ${{ secrets.LINE_ACCESS_TOKEN }}
-  #         message: "[HelloWorld - test] start deploy...&stickerPackageId=3&stickerId=220"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Nofify action
+        run: "curl -X POST ${{ env.notify_url }} -H 'Authorization: Bearer ${{ secrets.LINE_ACCESS_TOKEN }}' -d message='[${{ github.repository }}][${{ env.stage }}] success deploy&stickerPackageId=3&stickerId=220'"
