--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,8 @@
     "browser": true,
     "commonjs": true,
     "es6": true,
-    "node": true
+    "node": true,
+    "jest/globals": true
   },
   "parserOptions": {
     "ecmaVersion": 2018,
@@ -29,7 +30,8 @@
     }
   },
   "plugins": [
-    "react"
+    "react",
+    "jest"
   ],
   "rules": {
     "react/react-in-jsx-scope": "off",
@@ -38,6 +40,11 @@
     "react/jsx-one-expression-per-line": "off",
     "react/no-unescaped-entities": "off",
     "jsx-a11y/label-has-associated-control": "off",
+    "jest/no-disabled-tests": "warn",
+    "jest/no-focused-tests": "error",
+    "jest/no-identical-title": "error",
+    "jest/prefer-to-have-length": "warn",
+    "jest/valid-expect": "error",
     "no-unused-vars": "warn"
   }
 }
