--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "start:production": "NODE_ENV=production STAGE_ENV=production next start -p 80",
     "lint-watch": "esw pages --ext .js,.jsx --watch --color",
     "lint": "eslint pages",
-    "lint:fix": "eslint pages --fix"
+    "lint:fix": "eslint pages --fix",
+    "test": "jest"
   },
   "resolutions": {
     "styled-components": "^5"
   },
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
+    "@babel/preset-env": "^7.12.11",
     "@types/node": "14.14.16",
     "@types/react": "17.0.0",
     "@zeit/next-css": "^1.0.1",
@@ -27,11 +29,13 @@
     "antd": "^4.9.4",
     "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.16.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
@@ -46,6 +50,7 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "eslint-watch": "7.0.0"
+    "eslint-watch": "7.0.0",
+    "jest": "^26.6.3"
   }
 }
